Adding script files to prove different GC strategies