@@ -1,5 +1,7 @@
 fork := true
 
+javaOptions++=Seq("-Xms3096M","-Xmx3096M","-XX:+UnlockExperimentalVMOptions","-XX:+UseZGC")
+
 lazy val akkaHttpVersion = "10.2.1"
 lazy val akkaVersion     = "2.6.10"
 lazy val kamonVersion    = "2.1.9"
